agregar más análisis

--- a/text-analysis.ipynb
+++ b/text-analysis.ipynb
@@ -1966,26 +1966,7 @@
     "\n",
     "Desarrollado por: Maria Castro Iregui\n",
     "\n",
-    "El algoritmo de Naive Bayes es un algoritmo de clasificación que se basa en el uso de probabilidades y el teorema de Bayes para predecir la clasificación en base a sus características [NB_1]. Para el caso de análisis de textos, el algoritmo analiza cada reseña como un conjunto de palabras, el cuál es construido con el algoritmo de BoW (Bag of Words) y calcula la probabilidad de que cada palabra se asocie a una de las calificaciones. Después, multiplica estas probabilidades independientes y este resultado lo multiplica por la probabilidad de que sea de cada una de las clasificaciones posibles. Finalmente, selecciona la clasificación con la probabilidad más alta. Es importante notar que este algoritmo supone todas las palabras entre sí, por lo cual es un algoritmo con alto sesgo (bias) y baja varianza."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current time: 08:18:37\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "current_time = datetime.now().strftime(\"%H:%M:%S\")\n",
-    "print(\"Current time:\", current_time)\n"
+    "El algoritmo de Naive Bayes es un algoritmo de clasificación que se basa en el uso de probabilidades y el teorema de Bayes para predecir la clasificación en base a sus características. Para el caso de análisis de textos, el algoritmo analiza cada reseña como un conjunto de palabras, el cuál es construido con el algoritmo de BoW (Bag of Words) y calcula la probabilidad de que cada palabra se asocie a una de las calificaciones. Después, multiplica estas probabilidades independientes y este resultado lo multiplica por la probabilidad de que sea de cada una de las clasificaciones posibles. Finalmente, selecciona la clasificación con la probabilidad más alta. Es importante notar que este algoritmo supone todas las palabras entre sí, por lo cual es un algoritmo con alto sesgo (bias) y baja varianza."
    ]
   },
   {
@@ -2430,7 +2411,16 @@
    "outputs": [],
    "source": [
     "df_feature_importance = pd.DataFrame(naive_bayes.feature_log_prob_.transpose(), index=bow_vectorizer.get_feature_names_out(), columns=naive_bayes.classes_)\n",
+    "\n",
+    "# las probabilidades estan en escala logaritmica, convertir a escala normal\n",
     "df_feature_importance = df_feature_importance.apply(lambda x: np.exp(x), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se obtienen las 20 palabras más probables en cada clasificación."
    ]
   },
   {
@@ -2706,6 +2696,7 @@
     }
    ],
    "source": [
+    "# Matriz de confusión sobre el conjunto de entrenamiento\n",
     "ConfusionMatrixDisplay.from_predictions(y_train, y_train_naive_predict)"
    ]
   },
@@ -2726,6 +2717,7 @@
     }
    ],
    "source": [
+    "# Metricas para el conjunto de entrenamiento\n",
     "print(\"accuracy:\", naive_bayes.score(bow_vectorizer.transform(X_train), y_train))\n",
     "print(\"precision:\", precision_score(y_train, y_train_naive_predict, average='macro'))\n",
     "print(\"recall:\", recall_score(y_train, y_train_naive_predict, average='macro'))\n",
@@ -2788,6 +2780,7 @@
     }
    ],
    "source": [
+    "# Matriz de confusión para el conjunto de prueba\n",
     "ConfusionMatrixDisplay.from_predictions(y_test, y_test_naive_predict)"
    ]
   },
@@ -2808,6 +2801,7 @@
     }
    ],
    "source": [
+    "# Metricas para el conjunto de prueba\n",
     "print(\"accuracy:\", naive_bayes.score(tfidf_vectorizer.transform(X_test), y_test))\n",
     "print(\"precision:\", precision_score(y_test, y_test_naive_predict, average='macro'))\n",
     "print(\"recall:\", recall_score(y_test, y_test_naive_predict, average='macro'))\n",
@@ -2841,6 +2835,13 @@
    "source": [
     "report = classification_report(y_test, y_test_naive_predict)\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aunque la métricas estan aceptable dadado que es un problema de clasificación multiclase, creemos que es posible mejorarlas. Además se observa que hay overfitting, pues las métricas sobre el conjunto de entrenamiento y el de prueba tienen un nivel de variación significativo. Además podemos ver que las palabras de más alta probabilidad de cada clasificación son dicientes pero hay algunas repeticiones que buscamos eliminar. Por esta razón, se decide user el filtro de palabras de altra frecuencia desarollado durante la etapa de procesamiento para reducir la dimension del problema y buscar obtener mejores métricas. \n"
    ]
   },
   {
@@ -3285,7 +3286,16 @@
    "outputs": [],
    "source": [
     "df_feature_importance_filtered= pd.DataFrame(naive_bayes_filtered.feature_log_prob_.transpose(), index=df_palabras_altafrec['Palabra'], columns=naive_bayes_filtered.classes_)\n",
+    "\n",
+    "# las probabilidades estan en escala logaritmica, convertir a escala normal\n",
     "df_feature_importance_filtered = df_feature_importance_filtered.apply(lambda x: np.exp(x), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nuevamente, se obtienen las 20 palabras con más alta probabilidad en cada clasificación."
    ]
   },
   {
