falto hacer save de las conclusiones

--- a/text-analysis.ipynb
+++ b/text-analysis.ipynb
@@ -3699,7 +3699,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusiones"
+    "A partir de las métricas y las palabras asigandas a cada clasficiación notamos que aunque en el conjunto de entrenamiento las métricas se reducen significativamente, vemos que hay menos overfitting en cuanto al conjunto de prueba. Sin embargo, el f1-score en esta iteración es menor al del modelo sin realizar el ajuste de la frecuencia de palabras. En cuanto a las palabras, vemos un conjutno para cada clasificación un poco más diciente en cuanto a los objetivos del negocio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusiones\n",
+    "\n",
+    "A pesar de que los f1-scores en ambas iteraciones son bajos, se debe tener en cuenta el 'trade-off' entre un mejor f1-score y un conjutno de features un poco más diciente para el negocio. Como el objetivo mencionado es obtener un alto nivel de precisión y de sensibilidad (recall), se le recomendaria al negocio irse por la primera iteración de Naive Bayes. Sin embargo, se debe tener en cuenta los resultados de todos los modelos antes de hacer una recomendación final."
    ]
   },
   {
