--- a/text-analysis.ipynb
+++ b/text-analysis.ipynb
@@ -1526,6 +1526,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 659,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.99      0.99      0.99       551\n",
+      "           2       1.00      0.98      0.99       812\n",
+      "           3       0.99      0.97      0.98      1086\n",
+      "           4       0.97      0.96      0.97      1373\n",
+      "           5       0.96      0.99      0.98      1636\n",
+      "\n",
+      "    accuracy                           0.98      5458\n",
+      "   macro avg       0.98      0.98      0.98      5458\n",
+      "weighted avg       0.98      0.98      0.98      5458\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Other metrics\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_train, y_predT_bow))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 642,
    "metadata": {},
    "outputs": [
@@ -1772,6 +1804,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 660,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.93      0.71      0.81       551\n",
+      "           2       0.83      0.74      0.78       812\n",
+      "           3       0.80      0.74      0.77      1086\n",
+      "           4       0.77      0.77      0.77      1373\n",
+      "           5       0.78      0.92      0.84      1636\n",
+      "\n",
+      "    accuracy                           0.80      5458\n",
+      "   macro avg       0.82      0.78      0.80      5458\n",
+      "weighted avg       0.80      0.80      0.80      5458\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Other metrics\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_train, y_predT))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 652,
    "metadata": {},
    "outputs": [
@@ -1806,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 662,
    "metadata": {},
    "outputs": [
     {
@@ -1814,15 +1878,15 @@
      "output_type": "stream",
      "text": [
       "Score 1:\n",
-      "['pesim', 'peor', 'mal', 'suci', 'terribl', 'horribl', 'cobr', 'dij', 'habi', 'duch']\n",
+      "['pesim', 'peor', 'mal', 'suci', 'terribl', 'horribl', 'cobr', 'dij', 'habi', 'duch', 'ningun', 'diner', 'rob', 'groser', 'pag']\n",
       "Score 2:\n",
-      "['mal', 'decepcion', 'pobr', 'nadi', 'habit', 'descuid', 'suci', 'esper', 'asign', 'pareci']\n",
+      "['mal', 'decepcion', 'pobr', 'nadi', 'habit', 'descuid', 'suci', 'esper', 'asign', 'pareci', 'dolar', 'ventan', 'parec', 'cuart', 'ped']\n",
       "Score 3:\n",
-      "['bastant', 'normal', 'aunqu', 'falt', 'embarg', 'men', 'demasi', 'elev', 'lent', 'mayor']\n",
+      "['bastant', 'normal', 'aunqu', 'falt', 'embarg', 'men', 'demasi', 'elev', 'lent', 'mayor', 'general', 'verd', 'interes', 'ten', 'acondicion']\n",
       "Score 4:\n",
-      "['buen', 'bien', 'comod', 'fresc', 'ciud', 'tunel', 'sencill', 'excelent', 'histori', 'antigu']\n",
+      "['buen', 'bien', 'comod', 'fresc', 'ciud', 'tunel', 'sencill', 'excelent', 'histori', 'antigu', 'limpi', 'tambi', 'hermos', 'agrad', 'centr']\n",
       "Score 5:\n",
-      "['excelent', 'delici', 'recomend', 'increibl', 'encant', 'atencion', 'hermos', 'maravill', 'perfect', 'ampli']\n"
+      "['excelent', 'delici', 'recomend', 'increibl', 'encant', 'atencion', 'hermos', 'maravill', 'perfect', 'ampli', 'sup', 'gran', 'graci', 'experient', 'recom']\n"
      ]
     }
    ],
@@ -1832,7 +1896,7 @@
     "    print(f\"Score {score}:\")\n",
     "    score_coefficients = coefficients[i]\n",
     "    sorted_indices = np.argsort(score_coefficients)\n",
-    "    top_words = [feature_names[idx] for idx in sorted_indices[-10:]]  # Get top 10 words\n",
+    "    top_words = [feature_names[idx] for idx in sorted_indices[-15:]]  # Get top 10 words\n",
     "    top_words.reverse()  # Reverse to get words with highest coefficients first\n",
     "    print(top_words)"
    ]
@@ -1969,7 +2033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
