tops features and probability array fro prediction

--- a/backend/pipeline.ipynb
+++ b/backend/pipeline.ipynb
@@ -179,35 +179,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "600     Excelente lugar, muy atentos desde el Sr. Arma...\n",
-      "7358    .Visitamos la Habana hace algunos días con mis...\n",
-      "6827    El lugar es una maravilla que merece ser visit...\n",
-      "6299    El mejoramiento continuo debe ser importante ,...\n",
-      "7718    Excelente ubicación.. Buenos servicios alreded...\n",
-      "Name: Review, dtype: object\n",
-      "\n",
-      "Predictions:\n",
-      "Prediction 1: Excelente lugar, muy atentos desde el Sr. Armando que nos llevo en el trasporte todo un profesional y bien puesta la camiseta de la hacienda y de Merida, el guía profesional 100% y el lugar se ve de ensueño para quedarse un par de noches,  felicidades - Predicted Class: 5\n",
-      "Prediction 2: .Visitamos la Habana hace algunos días con mis amigas y realmente  fue  muy desagradable pasar 2 días en este Hotel , está muy mal tenido , aire acondicionado en mal estado ,ducha mala , paredes con filtración de humedad... y que decir de los pasillos , la alfombra da susto... Al dar aviso a mantención reclamando el aire acondicionado , ya que era insufrible estar  con esa temperatura... nos trasladaron a las 2:00 AM .. después de estar más de 3 horas llamando permanentemente , El ingreso al Hotel no presagia lo encontrarás en la habitación .. REALMENTE UNA DESILUCIÓN!!! - Predicted Class: 1\n",
-      "Prediction 3: El lugar es una maravilla que merece ser visitado. El servicio de cobro es pésimo y no es por el dinero porque mucha gente entra gratis, se hacen filas de más de 1 hora para pasar a pleno sol y mucha gente se mete disque al baño y no hace fila. Esta muy desorganizado. - Predicted Class: 5\n",
-      "Prediction 4: El mejoramiento continuo debe ser importante , los alimentos y la bebidas deben de mejorar\n",
-      "ademas de que es mejor tomar coca que pepsi\n",
-      "variedad en la carne es necesario que se considere\n",
-      "la showtime debe de ser mas variado y con personas que sepan - Predicted Class: 5\n",
-      "Prediction 5: Excelente ubicación.. Buenos servicios alrededor.. Restaurante sumamente caro. Personal atento tanto en lobby como valet parking. Las habitaciones confortables y con muchos USB chargers para los gases. - Predicted Class: 5\n"
+      "7774    La comida es increíble y el servicio es bueno....\n",
+      "7250    Era interesante ver cómo vivían los Montejos m...\n",
+      "65      Es un hotel muy grande, con muchos lugares par...\n",
+      "3345    Fuimos a cenar hace unos días. La comida y el ...\n",
+      "5413    Me encanto el lugar, la comida esta muy rica y...\n",
+      "Name: Review, dtype: object\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/andresarevalo/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/andresarevalo/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator TfidfTransformer from version 1.4.2 when using version 1.4.1.post1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
@@ -221,15 +217,30 @@
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Predictions:\n",
+      "Prediction 1: La comida es increíble y el servicio es bueno. Si quieres conocer los sabores de la región es el mejor lugar y el precio es razonable. - Predicted Class: [0.14681601 0.16062587 0.16229536 0.14366555 0.38659721]\n",
+      "Prediction 2: Era interesante ver cómo vivían los Montejos mientras estaban ocupados robar la tierra esclavizantes y su gente. - Predicted Class: [0.2001508  0.22415507 0.22713982 0.13877314 0.20978117]\n",
+      "Prediction 3: Es un hotel muy grande, con muchos lugares para conocer, solo estuvimos dos noches, y en el dia aprovechamos a conocer la habana, de esta manera quiero aclarar que es un lindo hotel, pero si vas en pareja y tan pocos dias, como en nuestro caso no lo aprovechas! Aprovechen los buffets que hay en el mismo edificio, sobre todo en planta baja y en la esquina de la manzana, porque se come muy bien y barato! Aprovechen los restaurants del edificio, porque se come muy economico y mejor que afuera en la Habana. Nosotros estuvimos en un 5 piso, y daba al contrafrente, de no ser porque llovia, es una muy buena vista de la ciudad. - Predicted Class: [0.16965112 0.18732075 0.26142801 0.12232322 0.2592769 ]\n",
+      "Prediction 4: Fuimos a cenar hace unos días. La comida y el ambiente era genial. El servicio es excelente, rápido y eficiente. Mi marido tenía el combo de camarones y costillas, absolutamente delicioso. Tuve la ensalada de taco de pollo, que era perfecta, el pollo marinado era tierna y bien preparado. Un valor fiable, planeamos volver mientras esté aquí en Nuevo Vallarta - Predicted Class: [0.14692956 0.16020599 0.16180519 0.24787545 0.28318381]\n",
+      "Prediction 5: Me encanto el lugar, la comida esta muy rica y recién hecha se nota que el chef cuida cada detalle pera que todo sea perfecto, y puedes vivir una experiencia completa con bebida, comida y postre hindú.\n",
+      "\n",
+      "El servicio es de lo mejor, te guían...Más - Predicted Class: [0.13499474 0.14709981 0.14855521 0.13606181 0.43328843]\n"
+     ]
     }
    ],
    "source": [
     "def predict_with_pipeline(pipeline,input_df):\n",
     "    # Realizar la predicción utilizando el pipeline\n",
-    "    predictions = pipeline.predict(input_df)\n",
+    "    probabilities = pipeline.predict_proba(input_df)\n",
     "\n",
-    "    # Devolver las predicciones\n",
-    "    return predictions\n",
+    "    # Devolver las probabilidades\n",
+    "    return probabilities\n",
     "\n",
     "# Llamada a la función para obtener las predicciones\n",
     "input_df = pd.read_csv('../data/tipo1_entrenamiento_estudiantes.csv')\n",
